# aichatFLow

./:  AGENTS.md  .dockerignore  .gitignore  AGENTS_FE.md  AGENTS_PY.md  Dockerfile  OTIE_PRD_v1.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
app/: main.py
app/adapters/: base.py  dify.py  fastgpt.py
app/api/: deps.py
app/contracts/: __init__.py  otie.py
app/core/: config.py  logging.py
app/memory/: __init__.py  plan_store.py
app/models/: domain.py
app/observability/: __init__.py  otie_trace_service.py
app/orchestrator/: graph.py
app/planner/: __init__.py  intent_service.py  planner_service.py
app/policy/: __init__.py  runtime_policy.py
app/runtime/: __init__.py  deepagent_adapter.py  loop.py  platform_file_adapter.py  platform_tool_adapter.py  platform_trace_adapter.py
app/schemas/: unified.py
app/services/: agent_registry_service.py  approval_store.py  capability_service.py  clawhub_plan_analysis.py  clawhub_service.py  clawhub_workspace_sync.py  execution_steps.py  executor.py  file_acl_service.py  file_service.py  metrics_service.py  personal_skill_tree_service.py  plan_record_service.py  (+12 more)
chatui-taiwild/: .gitignore  Dockerfile  package-lock.json  package.json
docs/: REPO_LAYOUT.md  code-structure.md
scripts/: dev-api.sh  dev-web.sh
stories/: README.md
tests_py/: test_capabilities.py  test_clawhub.py  test_files.py  test_otie.py  test_plan_clawhub_suggestions.py  test_rag.py  test_schema_validation.py  test_unified.py
(+127 files in other folders)
